--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
+    android:label="Motorcycles"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.android.moto.ui.main.MainActivity">
