--- a/app/src/main/res/layout/fragment_lista_motos.xml
+++ b/app/src/main/res/layout/fragment_lista_motos.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.android.moto.ui.listamotos.ListaMotosFragment">
+    tools:context="br.com.android.moto.ui.listmoto.ListMotoFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMotos"
