--- a/app/src/main/res/layout/item_moto.xml
+++ b/app/src/main/res/layout/item_moto.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/ivFoto"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/ivFoto"/>
+        android:layout_height="200dp" />
 
     <TextView
+        android:id="@+id/tvModelo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:id="@+id/tvModelo"
-        tools:text="Modelo"/>
+        app:fontFamily="sans-serif"
+        tools:text="Modelo" />
 
     <TextView
         android:layout_width="match_parent"
