--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_lista"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_motorcycle_black_24dp"
         android:title="@string/view_motos" />
 
     <item
         android:id="@+id/navigation_novo"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Nova Moto"/>
+        android:icon="@drawable/ic_add_circle_outline_black_24dp"
+        android:title="@string/new_moto"/>
 
     <item
         android:id="@+id/navigation_sobre"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_contact_mail_black_24dp"
         android:title="@string/about" />
 
 </menu>
