--- a/app/src/main/res/layout/item_moto.xml
+++ b/app/src/main/res/layout/item_moto.xml
@@ -12,19 +12,55 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
-    <TextView
-        android:id="@+id/tvModelo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:fontFamily="sans-serif"
-        tools:text="Modelo" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="left"
         android:id="@+id/tvMarca"
+        android:paddingLeft="16dp"
         tools:text="Marca"/>
+
+    <TextView
+        android:id="@+id/tvModelo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        app:fontFamily="sans-serif"
+        android:paddingLeft="16dp"
+        tools:text="Modelo" />
+
+    <TextView
+        android:id="@+id/tvAno"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        app:fontFamily="sans-serif"
+        android:paddingRight="16dp"
+        tools:text="Ano" />
+
+    <TextView
+        android:id="@+id/tvPlaca"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        app:fontFamily="sans-serif"
+        android:paddingRight="16dp"
+        tools:text="Placa" />
+
+
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom">
+
+        <Button
+            android:id="@+id/btnUpdate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/register" />
+
+    </LinearLayout>
 
 </LinearLayout>
