--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,12 +8,17 @@
 
     <item
         android:id="@+id/navigation_novo"
-        android:icon="@drawable/ic_add_circle_outline_black_24dp"
-        android:title="@string/new_moto"/>
+        android:icon="@drawable/ic_create_black_24dp"
+        android:title="@string/register"/>
 
     <item
         android:id="@+id/navigation_sobre"
         android:icon="@drawable/ic_contact_mail_black_24dp"
         android:title="@string/about" />
+
+    <item
+        android:id="@+id/navigation_sair"
+        android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:title="@string/quit" />
 
 </menu>
